--- a/root/bower.json
+++ b/root/bower.json
@@ -20,6 +20,7 @@
     "normalize.css": "~3.0.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.16"
+    "angular-mocks": "~1.2.16",
+    "jquery": "~2.1.0"
   }
 }
